
syntax = "proto3";
// pay_order_extension 支付订单拓展
package order;
option go_package = "cloud/service/pay/order;order";
import "google/protobuf/timestamp.proto";

// PayOrderExtensionObject 数据对象
message PayOrderExtensionObject {
	// @inject_tag: db:"id" json:"id"
	optional int64 id = 1; //编号
	// @inject_tag: db:"no" json:"no"
	optional string no = 2; //支付订单号
	// @inject_tag: db:"order_id" json:"orderId"
	optional int64 order_id = 3; //支付订单编号
	// @inject_tag: db:"channel_id" json:"channelId"
	optional int64 channel_id = 4; //渠道编号
	// @inject_tag: db:"channel_code" json:"channelCode"
	optional string channel_code = 5; //渠道编码
	// @inject_tag: db:"user_ip" json:"userIp"
	optional string user_ip = 6; //ip
	// @inject_tag: db:"status" json:"status"
	optional int32 status = 7; //支付状态
	// @inject_tag: db:"channel_extras" json:"channelExtras"
	optional string channel_extras = 8; //支付渠道的额外参数
	// @inject_tag: db:"channel_error_code" json:"channelErrorCode"
	optional string channel_error_code = 9; //渠道调用报错时，错误码
	// @inject_tag: db:"channel_error_msg" json:"channelErrorMsg"
	optional string channel_error_msg = 10; //渠道调用报错时，错误信息
	// @inject_tag: db:"channel_notify_data" json:"channelNotifyData"
	optional string channel_notify_data = 11; //支付渠道异步通知的内容
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 12; //删除
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 13; //租户
	// @inject_tag: db:"creator" json:"creator"
	optional string creator = 14; //创建人
	// @inject_tag: db:"create_time" json:"createTime"
	google.protobuf.Timestamp create_time = 15; //创建时间
	// @inject_tag: db:"updater" json:"updater"
	optional string updater = 16; //更新人
	// @inject_tag: db:"update_time" json:"updateTime"
	google.protobuf.Timestamp update_time = 17; //更新时间
}
// PayOrderExtensionCreateRequest 创建数据请求
message PayOrderExtensionCreateRequest {
	PayOrderExtensionObject data = 1;
}
// PayOrderExtensionCreateResponse 创建数据响应
message PayOrderExtensionCreateResponse {
	int64 code = 1;
	string msg = 2;
	int64 data = 3;
}
// PayOrderExtensionUpdateRequest 更新数据请求
message PayOrderExtensionUpdateRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
	PayOrderExtensionObject data = 2;
}
// PayOrderExtensionUpdateResponse 更新数据响应
message PayOrderExtensionUpdateResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderExtensionDeleteRequest 删除数据请求
message PayOrderExtensionDeleteRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// PayOrderExtensionDeleteResponse 删除数据响应
message PayOrderExtensionDeleteResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderExtensionRequest 查询单条数据请求
message PayOrderExtensionRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// PayOrderExtensionResponse 查询单条数据响应
message PayOrderExtensionResponse {
	int64 code = 1;
	string msg = 2;
	PayOrderExtensionObject data = 3;
}
// PayOrderExtensionRecoverRequest 恢复数据请求
message PayOrderExtensionRecoverRequest {
	// @inject_tag: db:"id" json:"id"
	int64 id = 1; //编号
}
// PayOrderExtensionRecoverResponse 删除数据响应
message PayOrderExtensionRecoverResponse {
	int64 code = 1;
	string msg = 2;
}
// PayOrderExtensionItemRequest 查询单条数据请求
message PayOrderExtensionItemRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"order_id" json:"orderId"
	optional int64 order_id = 3; // 支付订单编号

}
// PayOrderExtensionItemResponse 查询单条数据响应
message PayOrderExtensionItemResponse {
	int64 code = 1;
	string msg = 2;
	PayOrderExtensionObject data = 3;
}
// PayOrderExtensionListRequest 列表数据
message PayOrderExtensionListRequest {
	
	// @inject_tag: db:"tenant_id" json:"tenantId"
	optional int64 tenant_id = 1; // 租户
	// @inject_tag: db:"deleted" json:"deleted"
	optional int32 deleted = 2; // 删除
	// @inject_tag: db:"order_id" json:"orderId"
	optional int64 order_id = 3; // 支付订单编号

}

// PayOrderExtensionListResponse 数据响应
message PayOrderExtensionListResponse {
	int64 code = 1;
  	string msg = 2;
	repeated PayOrderExtensionObject data = 3;
}


// PayOrderExtensionService 服务
service PayOrderExtensionService{
	rpc PayOrderExtensionCreate(PayOrderExtensionCreateRequest) returns (PayOrderExtensionCreateResponse);
	rpc PayOrderExtensionUpdate(PayOrderExtensionUpdateRequest) returns (PayOrderExtensionUpdateResponse);
	rpc PayOrderExtensionDelete(PayOrderExtensionDeleteRequest) returns (PayOrderExtensionDeleteResponse);
	rpc PayOrderExtension(PayOrderExtensionRequest) returns (PayOrderExtensionResponse);
	rpc PayOrderExtensionRecover(PayOrderExtensionRecoverRequest) returns (PayOrderExtensionRecoverResponse);
	rpc PayOrderExtensionItem(PayOrderExtensionItemRequest) returns (PayOrderExtensionItemResponse);
	rpc PayOrderExtensionList(PayOrderExtensionListRequest) returns (PayOrderExtensionListResponse);
}
